--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#3B6978"
     android:orientation="vertical"
     tools:context=".gui.SecondActivity">
 
@@ -15,6 +16,7 @@
         android:layout_marginBottom="20dp"
         android:text="@string/txt_smokingbehaviors"
         android:textAlignment="center"
+        android:textColor="@android:color/white"
         android:textSize="24sp"
         android:textStyle="bold" />
 
@@ -32,6 +34,7 @@
             android:layout_weight="1"
             android:gravity="fill"
             android:text="@string/txt_cigarettesday"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -57,6 +60,7 @@
             android:gravity="center"
             android:text="12"
             android:textAlignment="center"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -92,6 +96,7 @@
             android:layout_weight="1"
             android:gravity="fill"
             android:text="@string/txt_nicotine"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -117,6 +122,7 @@
             android:gravity="center"
             android:text="12"
             android:textAlignment="center"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -151,6 +157,7 @@
             android:layout_weight="1"
             android:gravity="fill"
             android:text="@string/txt_tar"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -176,6 +183,7 @@
             android:gravity="center"
             android:text="12"
             android:textAlignment="center"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -211,6 +219,7 @@
             android:layout_weight="1"
             android:gravity="fill"
             android:text="@string/txt_carbonmonoxide"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -236,6 +245,7 @@
             android:gravity="center"
             android:text="12"
             android:textAlignment="center"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -271,6 +281,7 @@
             android:layout_weight="1"
             android:gravity="fill"
             android:text="@string/txt_pricepack"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <EditText
@@ -281,6 +292,7 @@
             android:ems="10"
             android:inputType="numberDecimal"
             android:textAlignment="center"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
     </LinearLayout>
 
@@ -299,6 +311,7 @@
             android:layout_weight="1"
             android:gravity="fill"
             android:text="@string/txt_cigarettepack"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -324,6 +337,7 @@
             android:gravity="center"
             android:text="12"
             android:textAlignment="center"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -359,6 +373,7 @@
             android:layout_weight="1"
             android:gravity="fill"
             android:text="@string/txt_yearssmoked"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -384,6 +399,7 @@
             android:gravity="center"
             android:text="12"
             android:textAlignment="center"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -417,6 +433,7 @@
             android:layout_weight="1"
             android:gravity="fill"
             android:text="@string/txt_datequitting"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <Button
@@ -436,6 +453,7 @@
             android:hint="@string/hint_EnterDate"
             android:inputType="date"
             android:textAlignment="center"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
     </LinearLayout>
 
