--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:tabBackground="@android:color/darker_gray"
-        app:tabIndicatorColor="#f00"
-        app:tabSelectedTextColor="#f00"
+        app:tabIndicatorColor="#116979"
+        app:tabSelectedTextColor="#116979"
         app:tabTextColor="#000">
 
         <com.google.android.material.tabs.TabItem
