--- a/app/src/main/res/menu/option_menu.xml
+++ b/app/src/main/res/menu/option_menu.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/option_done"
         android:icon="@android:drawable/ic_menu_save"
-        android:title="Done"
+        android:title="@string/txt_done"
         app:showAsAction="always" />
 </menu>
